--- a/Argento Inmobiliaria/index.html
+++ b/Argento Inmobiliaria/index.html
@@ -31,5 +31,28 @@
       <li id="contacto"><a href="contáctanos.html">CONTÁCTANOS</a></li>
     </ul>
     <hr>
+
+    <footer>
+      <div class="footer-content">
+        <div class="logo">
+          <img src="Imagenes/logo_argento.jpg" alt="Argento Inmobiliaria">
+        </div>
+        <div class="footer-text">
+          <p>Encontranos en</p>
+        </div>
+        <div class="contact-info-footer">
+          <p>(011) 0800-XXXX</p>
+          <p>CABA. Buenos Aires - Argentina</p>
+        </div>
+      </div>
+      <div class="social-icons-footer">
+        <p>Seguinos en</p>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div class="legal-info-footer">
+        <p>© 2024 Argento Inmobiliaria.</p>
+      </div>
+    </footer>
 </body>
 </html>
