--- a/Argento Inmobiliaria/index.html
+++ b/Argento Inmobiliaria/index.html
@@ -32,14 +32,12 @@
     </ul>
     <hr>
 
-    <footer>
-      <div class="footer-content">
-        <div class="logo">
-          <img src="Imagenes/logo_argento.jpg" alt="Argento Inmobiliaria">
-        </div>
-        <div class="footer-text">
-          <p>Encontranos en</p>
-        </div>
+    <footer class="footer-content">
+      <div class="logo-footer">
+        <img src="Imagenes/logo_argento.jpg" alt="Argento Inmobiliaria">
+      </div>
+      <div class="footer-text">
+        <p>Encontranos en</p>
         <div class="contact-info-footer">
           <p>(011) 0800-XXXX</p>
           <p>CABA. Buenos Aires - Argentina</p>
@@ -51,7 +49,7 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
       <div class="legal-info-footer">
-        <p>© 2024 Argento Inmobiliaria.</p>
+        <p>©2024 Argento Inmobiliaria</p>
       </div>
     </footer>
 </body>
