--- a/Argento Inmobiliaria/contáctanos.html
+++ b/Argento Inmobiliaria/contáctanos.html
@@ -32,6 +32,24 @@
     </ul>
     <hr>
 
+    <section class="contact-section">
+      <h1>CONTACTO</h1>
+      <p>Lo invitamos a dejarnos sus datos y nos contactaremos con usted a la brevedad.</p>
+      <form action="#" method="post">
+          <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" name="nombre" required>
+          <label for="telefono">Teléfono</label>
+          <input type="tel" id="telefono" name="telefono" required>
+          <label for="celular">Celular</label>
+          <input type="tel" id="celular" name="celular">
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" required>
+          <label for="mensaje">Mensaje</label>
+          <textarea id="mensaje" name="mensaje" rows="4"></textarea>
+          <button type="submit">Enviar</button>
+      </form>
+    </section>
+
     <footer class="footer-content">
       <div class="logo-footer">
         <img src="Imagenes/logo_argento.jpg" alt="Argento Inmobiliaria">
